# Computational-Analysis-of-Many-Rotor-Systems

./: .coverage  Latex_test.fls  Latex_test.tex  README.md  TF_check.ipynb  changing_t_periodic_to_sparse.ipynb  check_TF_RDM.ipynb  check_TM_RDM.ipynb  check_integrator.ipynb  d_2_system.ipynb  density_matrix_&_5_sites.ipynb  direct_diagnolisation.ipynb  double_operators.ipynb  energy.csv  expanding_2_d.ipynb  final_analisis.ipynb  hamiltonian_stress_test_log.txt  julia_test.ipynb  optimising_numba.ipynb  produce_TF_RDM.ipynb  produce_graphs.ipynb  stat_mech_thermo.ipynb  t_1 amplitudes.csv  t_2 amplitudes.csv  t_2 amplitudes_old.csv  t_amplitutes.ipynb  tesing.py  test.py  test_sparse_hamilatians.ipynb  test_t_amp.ipynb  testing_tilted_rotors.ipynb  thermal_field_dencity_checks.ipynb  thermal_field_hamiltonian.ipynb  thermal_field_hamiltonian_graphs.ipynb  thermal_field_indegration_sparse.ipynb  thermofield_boltz_funcs.py  thermofield_test_boltz.py  time_dependant.ipynb  time_prop_illa.py
quant_rotor/: pyproject.toml  setup.py
quant_rotor/core/: Non_Periodic.py  Non_Periodic_clean.py  Periodic.py  Periodic_clean.py  de_solve.py  de_solve_one_thermal.py  hamiltonian.py  hamiltonian_Illia.py  hamiltonian_big.py  t_amplitudes_non_periodic.py  t_amplitudes_periodic.py  t_amplitudes_periodic_unique.py
quant_rotor/data/: E0_N2_ED.csv  K_matrix.npy  V_matrix.npy  input.txt  matrix_elements_K.csv  matrix_elements_V.csv
quant_rotor/models/: density_matrix.py  non_periodic_sup_class.py  periodic_sup_class.py  support_ham.py  t_amplitudes.py  t_amplitudes_guess.py  (+2 more)
(+108 files in other folders)
